--- a/Source/DotNet4.5/HaravanAPIAdapterLibrary/HaravanAPIAdapterLibrary.csproj
+++ b/Source/DotNet4.5/HaravanAPIAdapterLibrary/HaravanAPIAdapterLibrary.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HashUtils.cs" />
     <Compile Include="IDataTranslator.cs" />
     <Compile Include="HaravanAPIAuthorizer.cs" />
     <Compile Include="HaravanApiClient.cs" />
